src/TP/Primera_Entrega/y.output
Terminals unused in grammar

   C_A
   C_C
   REAL
   THEN
   ENDIF
   ENDWHILE


Gramática

    0 $accept: programa $end

    1 programa: declaracion inicio

    2 $@1: /* vacío */

    3 $@2: /* vacío */

    4 programa: declaracion $@1 $@2

    5 $@3: /* vacío */

    6 declaracion: DECVAR definicion ENDDEC $@3

    7 definicion: lista_id

    8 $@4: /* vacío */

    9 definicion: lista_id definicion $@4

   10 $@5: /* vacío */

   11 inicio: lista_sentencias $@5

   12 $@6: /* vacío */

   13 lista_sentencias: sentencia $@6

   14 $@7: /* vacío */

   15 lista_sentencias: lista_sentencias sentencia $@7

   16 $@8: /* vacío */

   17 sentencia: asignacion $@8

   18 $@9: /* vacío */

   19 sentencia: decision $@9

   20 $@10: /* vacío */

   21 sentencia: iteracion $@10

   22 $@11: /* vacío */

   23 sentencia: entrada $@11

   24 $@12: /* vacío */

   25 sentencia: salida $@12

   26 $@13: /* vacío */

   27 sentencia: constante $@13

   28 $@14: /* vacío */

   29 asignacion: ID OPE_ASIG expresion PUNTO_COMA $@14

   30 $@15: /* vacío */

   31 lista_id: ID DOS_PUNTOS tipo_dato $@15

   32 $@16: /* vacío */

   33 lista_id: ID COMA lista_id $@16

   34 $@17: /* vacío */

   35 tipo_dato: INTEGER $@17

   36 $@18: /* vacío */

   37 tipo_dato: STRING $@18

   38 $@19: /* vacío */

   39 tipo_dato: FLOAT $@19

   40 $@20: /* vacío */

   41 entrada: READ ID PUNTO_COMA $@20

   42 $@21: /* vacío */

   43 salida: WRITE CTE_STR PUNTO_COMA $@21

   44 $@22: /* vacío */

   45 salida: WRITE ID PUNTO_COMA $@22

   46 $@23: /* vacío */

   47 decision: IF condicion L_A lista_sentencias L_C $@23

   48 $@24: /* vacío */

   49 decision: IF condicion L_A lista_sentencias L_C ELSE L_A lista_sentencias L_C $@24

   50 $@25: /* vacío */

   51 condicion: P_A condicion_simple P_C $@25

   52 $@26: /* vacío */

   53 condicion: P_A condicion_doble P_C $@26

   54 $@27: /* vacío */

   55 condicion: P_A NOT condicion_simple P_C $@27

   56 $@28: /* vacío */

   57 condicion_simple: expresion MAYOR expresion $@28

   58 $@29: /* vacío */

   59 condicion_simple: expresion MENOR expresion $@29

   60 $@30: /* vacío */

   61 condicion_simple: expresion DIST expresion $@30

   62 $@31: /* vacío */

   63 condicion_simple: expresion IGUAL expresion $@31

   64 $@32: /* vacío */

   65 condicion_simple: expresion MAY_IG expresion $@32

   66 $@33: /* vacío */

   67 condicion_simple: expresion MEN_IG expresion $@33

   68 $@34: /* vacío */

   69 condicion_doble: condicion_simple AND condicion_simple $@34

   70 $@35: /* vacío */

   71 condicion_doble: condicion_simple OR condicion_simple $@35

   72 $@36: /* vacío */

   73 iteracion: WHILE condicion L_A lista_sentencias L_C $@36

   74 $@37: /* vacío */

   75 expresion: termino $@37

   76 $@38: /* vacío */

   77 expresion: expresion OPE_SUM termino $@38

   78 $@39: /* vacío */

   79 expresion: expresion OPE_RES termino $@39

   80 $@40: /* vacío */

   81 termino: factor $@40

   82 $@41: /* vacío */

   83 termino: P_A expresion P_C $@41

   84 $@42: /* vacío */

   85 termino: termino OPE_MUL factor $@42

   86 $@43: /* vacío */

   87 termino: termino OPE_DIV factor $@43

   88 $@44: /* vacío */

   89 factor: ID $@44

   90 $@45: /* vacío */

   91 factor: CTE_INT $@45

   92 $@46: /* vacío */

   93 factor: CTE_REAL $@46

   94 $@47: /* vacío */

   95 factor: CTE_STR $@47

   96 $@48: /* vacío */

   97 constante: CONST ID OPE_ASIG CTE_INT PUNTO_COMA $@48

   98 $@49: /* vacío */

   99 constante: CONST ID OPE_ASIG CTE_REAL PUNTO_COMA $@49

  100 $@50: /* vacío */

  101 constante: CONST ID OPE_ASIG CTE_STR PUNTO_COMA $@50


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
DECVAR (258) 6
ENDDEC (259) 6
DOS_PUNTOS (260) 31
C_A (261)
C_C (262)
INTEGER (263) 35
STRING (264) 37
FLOAT (265) 39
REAL (266)
COMA (267) 33
ID (268) 29 31 33 41 45 89 97 99 101
OPE_ASIG (269) 29 97 99 101
OPE_SUM (270) 77
OPE_RES (271) 79
OPE_MUL (272) 85
OPE_DIV (273) 87
CTE_REAL (274) 93 99
CTE_STR (275) 43 95 101
CTE_INT (276) 91 97
P_A (277) 51 53 55 83
P_C (278) 51 53 55 83
IF (279) 47 49
THEN (280)
ELSE (281) 49
ENDIF (282)
IGUAL (283) 63
DIST (284) 61
MENOR (285) 59
MAYOR (286) 57
MEN_IG (287) 67
MAY_IG (288) 65
AND (289) 69
OR (290) 71
NOT (291) 55
WHILE (292) 73
ENDWHILE (293)
CONST (294) 97 99 101
WRITE (295) 43 45
READ (296) 41
PUNTO_COMA (297) 29 41 43 45 97 99 101
L_A (298) 47 49 73
L_C (299) 47 49 73


No terminales con las reglas donde aparecen

$accept (45)
    en la izquierda: 0
programa (46)
    en la izquierda: 1 4, en la derecha: 0
$@1 (47)
    en la izquierda: 2, en la derecha: 4
$@2 (48)
    en la izquierda: 3, en la derecha: 4
declaracion (49)
    en la izquierda: 6, en la derecha: 1 4
$@3 (50)
    en la izquierda: 5, en la derecha: 6
definicion (51)
    en la izquierda: 7 9, en la derecha: 6 9
$@4 (52)
    en la izquierda: 8, en la derecha: 9
inicio (53)
    en la izquierda: 11, en la derecha: 1
$@5 (54)
    en la izquierda: 10, en la derecha: 11
lista_sentencias (55)
    en la izquierda: 13 15, en la derecha: 11 15 47 49 73
$@6 (56)
    en la izquierda: 12, en la derecha: 13
$@7 (57)
    en la izquierda: 14, en la derecha: 15
sentencia (58)
    en la izquierda: 17 19 21 23 25 27, en la derecha: 13 15
$@8 (59)
    en la izquierda: 16, en la derecha: 17
$@9 (60)
    en la izquierda: 18, en la derecha: 19
$@10 (61)
    en la izquierda: 20, en la derecha: 21
$@11 (62)
    en la izquierda: 22, en la derecha: 23
$@12 (63)
    en la izquierda: 24, en la derecha: 25
$@13 (64)
    en la izquierda: 26, en la derecha: 27
asignacion (65)
    en la izquierda: 29, en la derecha: 17
$@14 (66)
    en la izquierda: 28, en la derecha: 29
lista_id (67)
    en la izquierda: 31 33, en la derecha: 7 9 33
$@15 (68)
    en la izquierda: 30, en la derecha: 31
$@16 (69)
    en la izquierda: 32, en la derecha: 33
tipo_dato (70)
    en la izquierda: 35 37 39, en la derecha: 31
$@17 (71)
    en la izquierda: 34, en la derecha: 35
$@18 (72)
    en la izquierda: 36, en la derecha: 37
$@19 (73)
    en la izquierda: 38, en la derecha: 39
entrada (74)
    en la izquierda: 41, en la derecha: 23
$@20 (75)
    en la izquierda: 40, en la derecha: 41
salida (76)
    en la izquierda: 43 45, en la derecha: 25
$@21 (77)
    en la izquierda: 42, en la derecha: 43
$@22 (78)
    en la izquierda: 44, en la derecha: 45
decision (79)
    en la izquierda: 47 49, en la derecha: 19
$@23 (80)
    en la izquierda: 46, en la derecha: 47
$@24 (81)
    en la izquierda: 48, en la derecha: 49
condicion (82)
    en la izquierda: 51 53 55, en la derecha: 47 49 73
$@25 (83)
    en la izquierda: 50, en la derecha: 51
$@26 (84)
    en la izquierda: 52, en la derecha: 53
$@27 (85)
    en la izquierda: 54, en la derecha: 55
condicion_simple (86)
    en la izquierda: 57 59 61 63 65 67, en la derecha: 51 55 69 71
$@28 (87)
    en la izquierda: 56, en la derecha: 57
$@29 (88)
    en la izquierda: 58, en la derecha: 59
$@30 (89)
    en la izquierda: 60, en la derecha: 61
$@31 (90)
    en la izquierda: 62, en la derecha: 63
$@32 (91)
    en la izquierda: 64, en la derecha: 65
$@33 (92)
    en la izquierda: 66, en la derecha: 67
condicion_doble (93)
    en la izquierda: 69 71, en la derecha: 53
$@34 (94)
    en la izquierda: 68, en la derecha: 69
$@35 (95)
    en la izquierda: 70, en la derecha: 71
iteracion (96)
    en la izquierda: 73, en la derecha: 21
$@36 (97)
    en la izquierda: 72, en la derecha: 73
expresion (98)
    en la izquierda: 75 77 79, en la derecha: 29 57 59 61 63 65 67
    77 79 83
$@37 (99)
    en la izquierda: 74, en la derecha: 75
$@38 (100)
    en la izquierda: 76, en la derecha: 77
$@39 (101)
    en la izquierda: 78, en la derecha: 79
termino (102)
    en la izquierda: 81 83 85 87, en la derecha: 75 77 79 85 87
$@40 (103)
    en la izquierda: 80, en la derecha: 81
$@41 (104)
    en la izquierda: 82, en la derecha: 83
$@42 (105)
    en la izquierda: 84, en la derecha: 85
$@43 (106)
    en la izquierda: 86, en la derecha: 87
factor (107)
    en la izquierda: 89 91 93 95, en la derecha: 81 85 87
$@44 (108)
    en la izquierda: 88, en la derecha: 89
$@45 (109)
    en la izquierda: 90, en la derecha: 91
$@46 (110)
    en la izquierda: 92, en la derecha: 93
$@47 (111)
    en la izquierda: 94, en la derecha: 95
constante (112)
    en la izquierda: 97 99 101, en la derecha: 27
$@48 (113)
    en la izquierda: 96, en la derecha: 97
$@49 (114)
    en la izquierda: 98, en la derecha: 99
$@50 (115)
    en la izquierda: 100, en la derecha: 101


estado 0

    0 $accept: . programa $end

    DECVAR  desplazar e ir al estado 1

    programa     ir al estado 2
    declaracion  ir al estado 3


estado 1

    6 declaracion: DECVAR . definicion ENDDEC $@3

    ID  desplazar e ir al estado 4

    definicion  ir al estado 5
    lista_id    ir al estado 6


estado 2

    0 $accept: programa . $end

    $end  desplazar e ir al estado 7


estado 3

    1 programa: declaracion . inicio
    4         | declaracion . $@1 $@2

    ID     desplazar e ir al estado 8
    IF     desplazar e ir al estado 9
    WHILE  desplazar e ir al estado 10
    CONST  desplazar e ir al estado 11
    WRITE  desplazar e ir al estado 12
    READ   desplazar e ir al estado 13

    $default  reduce usando la regla 2 ($@1)

    $@1               ir al estado 14
    inicio            ir al estado 15
    lista_sentencias  ir al estado 16
    sentencia         ir al estado 17
    asignacion        ir al estado 18
    entrada           ir al estado 19
    salida            ir al estado 20
    decision          ir al estado 21
    iteracion         ir al estado 22
    constante         ir al estado 23


estado 4

   31 lista_id: ID . DOS_PUNTOS tipo_dato $@15
   33         | ID . COMA lista_id $@16

    DOS_PUNTOS  desplazar e ir al estado 24
    COMA        desplazar e ir al estado 25


estado 5

    6 declaracion: DECVAR definicion . ENDDEC $@3

    ENDDEC  desplazar e ir al estado 26


estado 6

    7 definicion: lista_id .
    9           | lista_id . definicion $@4

    ID  desplazar e ir al estado 4

    $default  reduce usando la regla 7 (definicion)

    definicion  ir al estado 27
    lista_id    ir al estado 6


estado 7

    0 $accept: programa $end .

    $default  aceptar


estado 8

   29 asignacion: ID . OPE_ASIG expresion PUNTO_COMA $@14

    OPE_ASIG  desplazar e ir al estado 28


estado 9

   47 decision: IF . condicion L_A lista_sentencias L_C $@23
   49         | IF . condicion L_A lista_sentencias L_C ELSE L_A lista_sentencias L_C $@24

    P_A  desplazar e ir al estado 29

    condicion  ir al estado 30


estado 10

   73 iteracion: WHILE . condicion L_A lista_sentencias L_C $@36

    P_A  desplazar e ir al estado 29

    condicion  ir al estado 31


estado 11

   97 constante: CONST . ID OPE_ASIG CTE_INT PUNTO_COMA $@48
   99          | CONST . ID OPE_ASIG CTE_REAL PUNTO_COMA $@49
  101          | CONST . ID OPE_ASIG CTE_STR PUNTO_COMA $@50

    ID  desplazar e ir al estado 32


estado 12

   43 salida: WRITE . CTE_STR PUNTO_COMA $@21
   45       | WRITE . ID PUNTO_COMA $@22

    ID       desplazar e ir al estado 33
    CTE_STR  desplazar e ir al estado 34


estado 13

   41 entrada: READ . ID PUNTO_COMA $@20

    ID  desplazar e ir al estado 35


estado 14

    4 programa: declaracion $@1 . $@2

    $default  reduce usando la regla 3 ($@2)

    $@2  ir al estado 36


estado 15

    1 programa: declaracion inicio .

    $default  reduce usando la regla 1 (programa)


estado 16

   11 inicio: lista_sentencias . $@5
   15 lista_sentencias: lista_sentencias . sentencia $@7

    ID     desplazar e ir al estado 8
    IF     desplazar e ir al estado 9
    WHILE  desplazar e ir al estado 10
    CONST  desplazar e ir al estado 11
    WRITE  desplazar e ir al estado 12
    READ   desplazar e ir al estado 13

    $default  reduce usando la regla 10 ($@5)

    $@5         ir al estado 37
    sentencia   ir al estado 38
    asignacion  ir al estado 18
    entrada     ir al estado 19
    salida      ir al estado 20
    decision    ir al estado 21
    iteracion   ir al estado 22
    constante   ir al estado 23


estado 17

   13 lista_sentencias: sentencia . $@6

    $default  reduce usando la regla 12 ($@6)

    $@6  ir al estado 39


estado 18

   17 sentencia: asignacion . $@8

    $default  reduce usando la regla 16 ($@8)

    $@8  ir al estado 40


estado 19

   23 sentencia: entrada . $@11

    $default  reduce usando la regla 22 ($@11)

    $@11  ir al estado 41


estado 20

   25 sentencia: salida . $@12

    $default  reduce usando la regla 24 ($@12)

    $@12  ir al estado 42


estado 21

   19 sentencia: decision . $@9

    $default  reduce usando la regla 18 ($@9)

    $@9  ir al estado 43


estado 22

   21 sentencia: iteracion . $@10

    $default  reduce usando la regla 20 ($@10)

    $@10  ir al estado 44


estado 23

   27 sentencia: constante . $@13

    $default  reduce usando la regla 26 ($@13)

    $@13  ir al estado 45


estado 24

   31 lista_id: ID DOS_PUNTOS . tipo_dato $@15

    INTEGER  desplazar e ir al estado 46
    STRING   desplazar e ir al estado 47
    FLOAT    desplazar e ir al estado 48

    tipo_dato  ir al estado 49


estado 25

   33 lista_id: ID COMA . lista_id $@16

    ID  desplazar e ir al estado 4

    lista_id  ir al estado 50


estado 26

    6 declaracion: DECVAR definicion ENDDEC . $@3

    $default  reduce usando la regla 5 ($@3)

    $@3  ir al estado 51


estado 27

    9 definicion: lista_id definicion . $@4

    $default  reduce usando la regla 8 ($@4)

    $@4  ir al estado 52


estado 28

   29 asignacion: ID OPE_ASIG . expresion PUNTO_COMA $@14

    ID        desplazar e ir al estado 53
    CTE_REAL  desplazar e ir al estado 54
    CTE_STR   desplazar e ir al estado 55
    CTE_INT   desplazar e ir al estado 56
    P_A       desplazar e ir al estado 57

    expresion  ir al estado 58
    termino    ir al estado 59
    factor     ir al estado 60


estado 29

   51 condicion: P_A . condicion_simple P_C $@25
   53          | P_A . condicion_doble P_C $@26
   55          | P_A . NOT condicion_simple P_C $@27

    ID        desplazar e ir al estado 53
    CTE_REAL  desplazar e ir al estado 54
    CTE_STR   desplazar e ir al estado 55
    CTE_INT   desplazar e ir al estado 56
    P_A       desplazar e ir al estado 57
    NOT       desplazar e ir al estado 61

    condicion_simple  ir al estado 62
    condicion_doble   ir al estado 63
    expresion         ir al estado 64
    termino           ir al estado 59
    factor            ir al estado 60


estado 30

   47 decision: IF condicion . L_A lista_sentencias L_C $@23
   49         | IF condicion . L_A lista_sentencias L_C ELSE L_A lista_sentencias L_C $@24

    L_A  desplazar e ir al estado 65


estado 31

   73 iteracion: WHILE condicion . L_A lista_sentencias L_C $@36

    L_A  desplazar e ir al estado 66


estado 32

   97 constante: CONST ID . OPE_ASIG CTE_INT PUNTO_COMA $@48
   99          | CONST ID . OPE_ASIG CTE_REAL PUNTO_COMA $@49
  101          | CONST ID . OPE_ASIG CTE_STR PUNTO_COMA $@50

    OPE_ASIG  desplazar e ir al estado 67


estado 33

   45 salida: WRITE ID . PUNTO_COMA $@22

    PUNTO_COMA  desplazar e ir al estado 68


estado 34

   43 salida: WRITE CTE_STR . PUNTO_COMA $@21

    PUNTO_COMA  desplazar e ir al estado 69


estado 35

   41 entrada: READ ID . PUNTO_COMA $@20

    PUNTO_COMA  desplazar e ir al estado 70


estado 36

    4 programa: declaracion $@1 $@2 .

    $default  reduce usando la regla 4 (programa)


estado 37

   11 inicio: lista_sentencias $@5 .

    $default  reduce usando la regla 11 (inicio)


estado 38

   15 lista_sentencias: lista_sentencias sentencia . $@7

    $default  reduce usando la regla 14 ($@7)

    $@7  ir al estado 71


estado 39

   13 lista_sentencias: sentencia $@6 .

    $default  reduce usando la regla 13 (lista_sentencias)


estado 40

   17 sentencia: asignacion $@8 .

    $default  reduce usando la regla 17 (sentencia)


estado 41

   23 sentencia: entrada $@11 .

    $default  reduce usando la regla 23 (sentencia)


estado 42

   25 sentencia: salida $@12 .

    $default  reduce usando la regla 25 (sentencia)


estado 43

   19 sentencia: decision $@9 .

    $default  reduce usando la regla 19 (sentencia)


estado 44

   21 sentencia: iteracion $@10 .

    $default  reduce usando la regla 21 (sentencia)


estado 45

   27 sentencia: constante $@13 .

    $default  reduce usando la regla 27 (sentencia)


estado 46

   35 tipo_dato: INTEGER . $@17

    $default  reduce usando la regla 34 ($@17)

    $@17  ir al estado 72


estado 47

   37 tipo_dato: STRING . $@18

    $default  reduce usando la regla 36 ($@18)

    $@18  ir al estado 73


estado 48

   39 tipo_dato: FLOAT . $@19

    $default  reduce usando la regla 38 ($@19)

    $@19  ir al estado 74


estado 49

   31 lista_id: ID DOS_PUNTOS tipo_dato . $@15

    $default  reduce usando la regla 30 ($@15)

    $@15  ir al estado 75


estado 50

   33 lista_id: ID COMA lista_id . $@16

    $default  reduce usando la regla 32 ($@16)

    $@16  ir al estado 76


estado 51

    6 declaracion: DECVAR definicion ENDDEC $@3 .

    $default  reduce usando la regla 6 (declaracion)


estado 52

    9 definicion: lista_id definicion $@4 .

    $default  reduce usando la regla 9 (definicion)


estado 53

   89 factor: ID . $@44

    $default  reduce usando la regla 88 ($@44)

    $@44  ir al estado 77


estado 54

   93 factor: CTE_REAL . $@46

    $default  reduce usando la regla 92 ($@46)

    $@46  ir al estado 78


estado 55

   95 factor: CTE_STR . $@47

    $default  reduce usando la regla 94 ($@47)

    $@47  ir al estado 79


estado 56

   91 factor: CTE_INT . $@45

    $default  reduce usando la regla 90 ($@45)

    $@45  ir al estado 80


estado 57

   83 termino: P_A . expresion P_C $@41

    ID        desplazar e ir al estado 53
    CTE_REAL  desplazar e ir al estado 54
    CTE_STR   desplazar e ir al estado 55
    CTE_INT   desplazar e ir al estado 56
    P_A       desplazar e ir al estado 57

    expresion  ir al estado 81
    termino    ir al estado 59
    factor     ir al estado 60


estado 58

   29 asignacion: ID OPE_ASIG expresion . PUNTO_COMA $@14
   77 expresion: expresion . OPE_SUM termino $@38
   79          | expresion . OPE_RES termino $@39

    OPE_SUM     desplazar e ir al estado 82
    OPE_RES     desplazar e ir al estado 83
    PUNTO_COMA  desplazar e ir al estado 84


estado 59

   75 expresion: termino . $@37
   85 termino: termino . OPE_MUL factor $@42
   87        | termino . OPE_DIV factor $@43

    OPE_MUL  desplazar e ir al estado 85
    OPE_DIV  desplazar e ir al estado 86

    $default  reduce usando la regla 74 ($@37)

    $@37  ir al estado 87


estado 60

   81 termino: factor . $@40

    $default  reduce usando la regla 80 ($@40)

    $@40  ir al estado 88


estado 61

   55 condicion: P_A NOT . condicion_simple P_C $@27

    ID        desplazar e ir al estado 53
    CTE_REAL  desplazar e ir al estado 54
    CTE_STR   desplazar e ir al estado 55
    CTE_INT   desplazar e ir al estado 56
    P_A       desplazar e ir al estado 57

    condicion_simple  ir al estado 89
    expresion         ir al estado 64
    termino           ir al estado 59
    factor            ir al estado 60


estado 62

   51 condicion: P_A condicion_simple . P_C $@25
   69 condicion_doble: condicion_simple . AND condicion_simple $@34
   71                | condicion_simple . OR condicion_simple $@35

    P_C  desplazar e ir al estado 90
    AND  desplazar e ir al estado 91
    OR   desplazar e ir al estado 92


estado 63

   53 condicion: P_A condicion_doble . P_C $@26

    P_C  desplazar e ir al estado 93


estado 64

   57 condicion_simple: expresion . MAYOR expresion $@28
   59                 | expresion . MENOR expresion $@29
   61                 | expresion . DIST expresion $@30
   63                 | expresion . IGUAL expresion $@31
   65                 | expresion . MAY_IG expresion $@32
   67                 | expresion . MEN_IG expresion $@33
   77 expresion: expresion . OPE_SUM termino $@38
   79          | expresion . OPE_RES termino $@39

    OPE_SUM  desplazar e ir al estado 82
    OPE_RES  desplazar e ir al estado 83
    IGUAL    desplazar e ir al estado 94
    DIST     desplazar e ir al estado 95
    MENOR    desplazar e ir al estado 96
    MAYOR    desplazar e ir al estado 97
    MEN_IG   desplazar e ir al estado 98
    MAY_IG   desplazar e ir al estado 99


estado 65

   47 decision: IF condicion L_A . lista_sentencias L_C $@23
   49         | IF condicion L_A . lista_sentencias L_C ELSE L_A lista_sentencias L_C $@24

    ID     desplazar e ir al estado 8
    IF     desplazar e ir al estado 9
    WHILE  desplazar e ir al estado 10
    CONST  desplazar e ir al estado 11
    WRITE  desplazar e ir al estado 12
    READ   desplazar e ir al estado 13

    lista_sentencias  ir al estado 100
    sentencia         ir al estado 17
    asignacion        ir al estado 18
    entrada           ir al estado 19
    salida            ir al estado 20
    decision          ir al estado 21
    iteracion         ir al estado 22
    constante         ir al estado 23


estado 66

   73 iteracion: WHILE condicion L_A . lista_sentencias L_C $@36

    ID     desplazar e ir al estado 8
    IF     desplazar e ir al estado 9
    WHILE  desplazar e ir al estado 10
    CONST  desplazar e ir al estado 11
    WRITE  desplazar e ir al estado 12
    READ   desplazar e ir al estado 13

    lista_sentencias  ir al estado 101
    sentencia         ir al estado 17
    asignacion        ir al estado 18
    entrada           ir al estado 19
    salida            ir al estado 20
    decision          ir al estado 21
    iteracion         ir al estado 22
    constante         ir al estado 23


estado 67
